<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickReturn</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_github">Github</string>
    <string name="action_donate">Donate</string>
    <string name="section_one">Section One</string>
    <string name="section_two">Section Two</string>
    <string name="section_three">Section Three</string>
    <string name="section_four">Section Four</string>
    <string name="section_five">Section Five</string>
    <string name="section_six">Section Six</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="both">Both</string>
    <string name="header_one">Header 1</string>
    <string name="header_two">Header 2</string>
    <string name="footer_one">Footer 1</string>
    <string name="footer_two">Footer 2</string>
    <string name="both_one">Both 1</string>
    <string name="both_two">Both 2</string>
    <string name="header_footer">Header &amp; Footer</string>
    <string name="result_canceled">Result Canceled</string>
    <string name="beer_order_canceled">Your beer order did not go through</string>
    <string name="item_already_owned">Failure to purchase since item is already owned</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, amet mucius perpetua eu nec, no eum accusam efficiantur,
        sumo molestiae qui ei. Vix ne doctus appetere, quis graeci salutatus cum ea. Deleniti ocurreret dignissim at
        pri, per at oblique sententiae delicatissimi. Et periculis similique vix, ut qui vitae minimum. Nulla debet
        eam te.\n\nVis virtute voluptatum no. Ne saperet oporteat vituperata his. Mei idque delectus deserunt id, vel
        in tale illud intellegebat. Mel putant molestie dissentiunt in.\n\nNam et liber definiebas, et unum quodsi
        maluisset nec. Te mea diam ludus mediocritatem, harum vulputate theophrastus eu nec. At summo aperiam nominati
        pro, in sit putent complectitur. Per dolore ridens denique id, quaeque signiferumque ut ius. At mel graeco
        everti definitiones, falli debet tincidunt quo ei. His eu saepe iisque utroque, natum sanctus electram mel an,
        sit id mollis deseruisse. Omnis accusam pro ex, molestie probatus pro id, no mea civibus efficiendi.\n\nCu sea
        accusam detracto constituto. Errem nullam conclusionemque nec et, ex dicta senserit voluptatibus ius. No atqui
        affert insolens mel. Assum graecis quo te, cum posse debet suscipit te. Mel ponderum definiebas consequuntur
        ne.\n\nUtinam ponderum per ad, at quo brute disputando. Recusabo omittantur reformidans no usu, copiosae
        posidonium nam te. Ei duo omittam conceptam. Nec at quas omnium ceteros, altera intellegat et nam. Vis ea wisi
        sensibus, ut eos magna facilisi splendide. Odio dictas percipitur pri ei, ea meliore inermis quo. Ut quo atomorum
        intellegat, dico salutandi mel cu.\n\nLorem ipsum dolor sit amet, amet mucius perpetua eu nec, no eum accusam
        efficiantur, sumo molestiae qui ei. Vix ne doctus appetere, quis graeci salutatus cum ea. Deleniti ocurreret
        dignissim at pri, per at oblique sententiae delicatissimi. Et periculis similique vix, ut qui vitae minimum.
        Nulla debet eam te.\n\nVis virtute voluptatum no. Ne saperet oporteat vituperata his. Mei idque delectus
        deserunt id, vel in tale illud intellegebat. Mel putant molestie dissentiunt in.\n\nNam et liber definiebas, et
        unum quodsi maluisset nec. Te mea diam ludus mediocritatem, harum vulputate theophrastus eu nec. At summo
        aperiam nominati pro, in sit putent complectitur. Per dolore ridens denique id, quaeque signiferumque ut ius.
        At mel graeco everti definitiones, falli debet tincidunt quo ei. His eu saepe iisque utroque, natum sanctus
        electram mel an, sit id mollis deseruisse. Omnis accusam pro ex, molestie probatus pro id, no mea civibus
        efficiendi.\n\nCu sea accusam detracto constituto. Errem nullam conclusionemque nec et, ex dicta senserit
        voluptatibus ius. No atqui affert insolens mel. Assum graecis quo te, cum posse debet suscipit te. Mel ponderum
        definiebas consequuntur ne.\n\nUtinam ponderum per ad, at quo brute disputando. Recusabo omittantur reformidans
        no usu, copiosae posidonium nam te. Ei duo omittam conceptam. Nec at quas omnium ceteros, altera intellegat et
        nam. Vis ea wisi sensibus, ut eos magna facilisi splendide. Odio dictas percipitur pri ei, ea meliore inermis
        quo. Ut quo atomorum intellegat, dico salutandi mel cu.\n\nLorem ipsum dolor sit amet, amet mucius perpetua eu
        nec, no eum accusam efficiantur, sumo molestiae qui ei. Vix ne doctus appetere, quis graeci salutatus cum ea.
        Deleniti ocurreret dignissim at pri, per at oblique sententiae delicatissimi. Et periculis similique vix, ut
        qui vitae minimum. Nulla debet eam te.\n\nVis virtute voluptatum no. Ne saperet oporteat vituperata his. Mei
        idque delectus deserunt id, vel in tale illud intellegebat. Mel putant molestie dissentiunt in.\n\nNam et liber
        definiebas, et unum quodsi maluisset nec. Te mea diam ludus mediocritatem, harum vulputate theophrastus eu nec.
        At summo aperiam nominati pro, in sit putent complectitur. Per dolore ridens denique id, quaeque signiferumque
        ut ius. At mel graeco everti definitiones, falli debet tincidunt quo ei. His eu saepe iisque utroque, natum
        sanctus electram mel an, sit id mollis deseruisse. Omnis accusam pro ex, molestie probatus pro id, no mea
        civibus efficiendi.\n\nCu sea accusam detracto constituto. Errem nullam conclusionemque nec et, ex dicta senserit
        voluptatibus ius. No atqui affert insolens mel. Assum graecis quo te, cum posse debet suscipit te. Mel ponderum
        definiebas consequuntur ne.</string>
    <string name="quick_return_type">QUICK_RETURN_TYPE</string>
    <string name="new_stories">New Stories</string>
    <string name="status">Status</string>
    <string name="photo">Photo</string>
    <string name="check_in">Check In</string>
    <string name="header_list">Header List</string>
    <string name="footer_list">Footer List</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="list_view">ListView</string>
    <string name="scroll_view">ScrollView</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="activity">Activity</string>
    <string name="buy_one_beer">buy_one_beer</string>
    <string name="buy_two_beers">buy_two_beers</string>
    <string name="buy_four_beers">buy_four_beers</string>
    <string name="whats_happening"> What\'s happening?</string>
    <string name="title_activity_quick_return_google_plus">QuickReturnGooglePlusActivity</string>
    <string name="plus_one">+%d</string>
    <string name="buy_me_a_beer">Buy me a beer</string>
    <string name="buy_me_two_beers">Buy me two beers</string>
    <string name="buy_me_four_beers">Buy me four beers</string>
    <string name="new_posts">New Posts! Touch to see them</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="listview">ListView</string>
    <string name="scrollview">ScrollView</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>

</resources>
