<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"/>

    <!--<com.etiennelawlor.quickreturn.views.CustomFontTextView-->
        <!--android:id="@+id/quick_return_tv"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:background="@color/transparent_black_ninty"-->
        <!--android:textSize="22sp"-->
        <!--android:text="@string/footer"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:gravity="center"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:textFont="Roboto_Bold"/>-->

    <TextView
        android:id="@+id/quick_return_header_tv"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="68dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_rounded_rectangle"
        android:textSize="14sp"
        android:text="@string/new_stories"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/quick_return_footer_ll"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/transparent_indigo_ninty"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/status"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent_white_fifty"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/photo"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent_white_fifty"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/check_in"
            android:gravity="center"
            android:textColor="@android:color/white"/>
    </LinearLayout>





</RelativeLayout>

